--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #E3F2FD;
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -26,7 +26,7 @@
         
         h1 {
             text-align: center;
-            color: #2196F3;
+            color: #0D47A1;
             margin-bottom: 30px;
         }
         
@@ -50,7 +50,7 @@
         }
         
         button {
-            background-color: #2196F3;
+            background-color: #0D47A1;
             color: white;
             border: none;
             padding: 12px;
@@ -70,11 +70,26 @@
         }
         
         .register-link a {
-            color: #2196F3;
+            color: #0D47A1;
             text-decoration: none;
         }
         
         .register-link a:hover {
+            text-decoration: underline;
+        }
+        
+        .guest-link {
+            text-align: center;
+            margin-top: 10px;
+        }
+        
+        .guest-link a {
+            color: #666;
+            text-decoration: none;
+            font-size: 14px;
+        }
+        
+        .guest-link a:hover {
             text-decoration: underline;
         }
     </style>
@@ -95,6 +110,9 @@
         </form>
         <div class="register-link">
             Don't have an account? <a href="/register">Register</a>
+        </div>
+        <div class="guest-link">
+            <a href="/public-chat">Continue as guest</a>
         </div>
     </div>
 </body>
